IE fix: measure tools overflow

--- a/plugins/MeasureDraw/MeasureDraw.styl
+++ b/plugins/MeasureDraw/MeasureDraw.styl
@@ -2,6 +2,7 @@
 .leaflet-control-measuredraw
 	// .dropdown-toggle
 	.dropdown-menu
+		overflow hidden
 		left auto
 		right 0
 		li
